--- a/Singtel/test-output/emailable-report.html
+++ b/Singtel/test-output/emailable-report.html
@@ -8,11 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,902</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">12,315</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">runner.CucumberTestNGRunner</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1662575727970</td><td rowspan="1">11070</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">runner.CucumberTestNGRunner</td><td><a href="#m0">runScenario</a></td><td rowspan="1">1662650779671</td><td rowspan="1">11374</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">runner.CucumberTestNGRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Check if the todo list is empty&quot;</td><td>&quot;Create Todos with BDD Cucumber Java&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">runner.CucumberTestNGRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Check if the todo list is empty&quot;</td><td>&quot;Create Todos with BDD Cucumber Java&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NullPointerException
+	at java.base/java.util.Arrays.stream(Arrays.java:5614)
+	at java.base/java.util.stream.Stream.of(Stream.java:1188)
+	at org.openqa.selenium.remote.RemoteWebDriver.executeScript(RemoteWebDriver.java:478)
+	at stepdefination.VueToDoStep.checkList(VueToDoStep.java:48)
+	at ✽.user creat new vuetodo list(file:///C:/Users/mahen/Downloads/Singtel/src/test/resources/features/create-todos.feature:6)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
