--- a/Singtel/test-output/old/Default suite/methods-alphabetical.html
+++ b/Singtel/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc828d">  <td>22/09/08 02:25:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberTestNGRunner@6b695b06]">runScenario</td> 
-  <td>main@527829831</td>   <td></td> </tr>
-<tr bgcolor="bc828d">  <td>22/09/08 02:25:11</td>   <td>-650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.CucumberTestNGRunner@6b695b06]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@527829831</td>   <td></td> </tr>
-<tr bgcolor="bc828d">  <td>22/09/08 02:25:24</td>   <td>12593</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberTestNGRunner@6b695b06]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@527829831</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>22/09/08 23:26:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberTestNGRunner@7bd7d6d6]">runScenario</td> 
+  <td>main@1926673338</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>22/09/08 23:26:18</td>   <td>-730</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.CucumberTestNGRunner@7bd7d6d6]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926673338</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>22/09/08 23:26:31</td>   <td>11403</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberTestNGRunner@7bd7d6d6]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926673338</td>   <td></td> </tr>
 </table>
