--- a/Singtel/test-output/old/Suite/methods-alphabetical.html
+++ b/Singtel/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc828d">  <td>22/09/08 02:35:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberTestNGRunner@c430e6c]">runScenario</td> 
-  <td>main@527829831</td>   <td></td> </tr>
-<tr bgcolor="bc828d">  <td>22/09/08 02:35:27</td>   <td>-612</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.CucumberTestNGRunner@c430e6c]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@527829831</td>   <td></td> </tr>
-<tr bgcolor="bc828d">  <td>22/09/08 02:35:39</td>   <td>11090</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberTestNGRunner@c430e6c]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@527829831</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>22/09/09 02:38:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberTestNGRunner@1cf6d1be]">runScenario</td> 
+  <td>main@201719260</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>22/09/09 02:38:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberTestNGRunner@1cf6d1be]">runScenario</td> 
+  <td>main@201719260</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>22/09/09 02:38:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberTestNGRunner@1cf6d1be]">runScenario</td> 
+  <td>main@201719260</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>22/09/09 02:37:45</td>   <td>-39164</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.CucumberTestNGRunner@1cf6d1be]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201719260</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>22/09/09 02:38:35</td>   <td>11534</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberTestNGRunner@1cf6d1be]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201719260</td>   <td></td> </tr>
 </table>
